--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,9 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_hooks: ^0.18.0
+  http: ^1.3.0
+  provider: ^6.1.2
+
 
 
   # The following adds the Cupertino Icons font to your application.
